# SerialLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  build.sh
cmake/: SerialLibConfig.cmake.in  cmake_uninstall.cmake.in
examples/: CMakeLists.txt  quick_start.cpp
examples/external_project_usage/: CMakeLists.txt  main.cpp
include/: SerialPort.h
src/: SerialPort.cpp
